--- a/详细页.css
+++ b/详细页.css
@@ -83,7 +83,7 @@ div ul li{
 	text-align: center;
 }
 #background{
-	background:url(dback.jpg) no-repeat ;
+	background:url(img/dback.jpg) no-repeat ;
 	color:rgba(249,249,249,1.00);
 	margin-top: 100px;
 	margin-left: 5px;
